dummysite/manifests/manual/manual-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dummysite-gen-ing
  namespace: default
spec:
  rules: 
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dummysite-gen-svc
            port:
              number: 2345
