dummysite/manifests/manual/service-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: dummysite-svc
  # namespace: 
spec:
  type: ClusterIP
  selector:
    app: dummysite-app # This is the app as declared in the deployment.
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dummysite-ingress
  # namespace: 
spec:
  rules: 
  # - host: localhost
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dummysite-svc
            port:
              number: 2345
